fixing scrollbars

--- a/public/static/css/app.css
+++ b/public/static/css/app.css
@@ -52,7 +52,7 @@ h1.title {
 .table .txid {
     font-family: monospace;
     max-width: 200px;
-    overflow: scroll
+    overflow: hidden;
 }
 
 .table .magicnumber {
